--- a/src/App.less
+++ b/src/App.less
@@ -183,7 +183,7 @@ input {
         font-size: 0.8em;
         color: @white;
         opacity: 0;
-        font-family: FontAwesome;
+        font-family: FontAwesome sans-serif;
         content: "\f00c";
       }
     }
